Implement user authentication, registration, JWT token generation, and user retrieval by ID

--- a/AICalendar.Api/appsettings.json
+++ b/AICalendar.Api/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=AICalendarDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "JwtSettings": {
+    "SecretKey": "AICalendar_SecretKey_2024_MinimumLength32Characters!",
+    "Issuer": "AICalendar.Api",
+    "Audience": "AICalendar.Client",
+    "ExpirationHours": 24
   }
 }
