--- a/AICalendar.Service/AICalendar.Service.csproj
+++ b/AICalendar.Service/AICalendar.Service.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AICalendar.DomainModels\AICalendar.DomainModels.csproj" />
+    <ProjectReference Include="..\AICalendar.Repository\AICalendar.Repository.csproj" />
+  </ItemGroup>
+
 </Project>
