--- a/AICalendar.Repository/AICalendar.Repository.csproj
+++ b/AICalendar.Repository/AICalendar.Repository.csproj
@@ -6,4 +6,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AICalendar.DomainModels\AICalendar.DomainModels.csproj" />
+  </ItemGroup>
+
 </Project>
+    
