Add web app and integrate microsoft indentity authentication

--- a/AICalendar.AppHost/AICalendar.AppHost.csproj
+++ b/AICalendar.AppHost/AICalendar.AppHost.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <Sdk Name="Aspire.AppHost.Sdk" Version="9.3.1" />
 
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AICalendar.Api\AICalendar.Api.csproj" />
+    <ProjectReference Include="..\AICalendar.Client\AICalendar.Client.csproj" />
   </ItemGroup>
 
 </Project>
