Add calendar event management and UI enhancements
- Updated `AICalendar.Api.csproj` with new package references for HTTP client and authentication.
- Registered `ICalendarEeventService` in `Program.cs` for calendar event management.
- Modified `Index.cshtml` to include a calendar element and JavaScript for FullCalendar integration.
- Changed `OnGet` method in `Index.cshtml.cs` to asynchronous for API calls.
- Included FullCalendar's CSS and JS in `_Layout.cshtml`.
- Added `CalendarEventController.cs` to handle calendar event API requests.
- Created `CalendarEventDto` classes in both client and domain models.
- Defined `ICalendarEeventService` interface for calendar event services.
- Implemented `CalendarEventService.cs` to fetch events from Microsoft Graph API using OBO flow.
- Updated `AICalendar.Service.csproj` to reference `Microsoft.Extensions.Http`.

--- a/AICalendar.Api/AICalendar.Api.csproj
+++ b/AICalendar.Api/AICalendar.Api.csproj
@@ -16,7 +16,10 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.9" />
     <PackageReference Include="Microsoft.Extensions.ServiceDiscovery" Version="9.4.2" />
+    <PackageReference Include="Microsoft.Identity.Client" Version="4.77.0" />
+    <PackageReference Include="Microsoft.Identity.Web" Version="3.14.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
