--- a/AICalendar.Client/AICalendar.Client.csproj
+++ b/AICalendar.Client/AICalendar.Client.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Identity.Web" Version="3.14.0" />
+    <PackageReference Include="Microsoft.Identity.Web.DownstreamApi" Version="3.14.1" />
     <PackageReference Include="Microsoft.Identity.Web.UI" Version="3.14.0" />
   </ItemGroup>
 
