--- a/AICalendar.Service/AICalendar.Service.csproj
+++ b/AICalendar.Service/AICalendar.Service.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Http" Version="9.0.9" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\AICalendar.DomainModels\AICalendar.DomainModels.csproj" />
     <ProjectReference Include="..\AICalendar.Repository\AICalendar.Repository.csproj" />
   </ItemGroup>
