Add AICalendar.LLMApi project and configure services
This commit introduces a new project, `AICalendar.LLMApi`, to the solution. It includes updates to `AppHost.cs` for LLM API integration, modifications in `Program.cs` for JWT authentication, and the addition of `LlmProxyController` and `HealthController` for handling API requests. Necessary package references and configurations have been added in `AICalendar.LLMApi.csproj`, `appsettings.json`, and `launchSettings.json` to support the new API's functionality and development environment.

--- a/AICalendar.AppHost/AICalendar.AppHost.csproj
+++ b/AICalendar.AppHost/AICalendar.AppHost.csproj
@@ -18,6 +18,7 @@
   <ItemGroup>
     <ProjectReference Include="..\AICalendar.Api\AICalendar.Api.csproj" />
     <ProjectReference Include="..\AICalendar.Client\AICalendar.Client.csproj" />
+    <ProjectReference Include="..\AICalendar.LLMApi\AICalendar.LLMApi.csproj" />
     <ProjectReference Include="..\AICalendar.MCP\AICalendar.MCP.csproj" />
   </ItemGroup>
 
