--- a/AICalendar.LLMApi/AICalendar.Chat.csproj
+++ b/AICalendar.LLMApi/AICalendar.Chat.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.Extensions.AI" Version="9.9.0" />
     <PackageReference Include="Microsoft.Extensions.AI.OpenAI" Version="9.9.0-preview.1.25458.4" />
     <PackageReference Include="Microsoft.Identity.Web" Version="3.14.1" />
+    <PackageReference Include="ModelContextProtocol" Version="0.3.0-preview.4" />
     <PackageReference Include="OpenAI" Version="2.4.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
